--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires-python = ">= 3.11"
 version = "0.1.0"
 dependencies = [
     "click>=8.2.1",
-    "mcp==1.10.1",
+    "mcp==1.10.1", "typer>=0.16.0,<0.17", "loguru>=0.7.3,<0.8",
 ]
 
 [tool.pixi.project]
