--- a/requirements.txt
+++ b/requirements.txt
@@ -14,17 +14,25 @@ httpx-sse==0.4.1
 idna==3.10
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
+loguru==0.7.3
+markdown-it-py==3.0.0
 mcp==1.10.1
+mdurl==0.1.2
 pydantic==2.11.7
 pydantic-core==2.33.2
 pydantic-settings==2.10.1
+pygments==2.19.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
 referencing==0.36.2
+rich==14.0.0
 rpds-py==0.25.1
+shellingham==1.5.4
 sniffio==1.3.1
 sse-starlette==2.3.6
 starlette==0.47.1
+typer==0.16.0
 typing-extensions==4.14.0
 typing-inspection==0.4.1
 uvicorn==0.34.3 ; sys_platform != 'emscripten'
+win32-setctime==1.2.0 ; sys_platform == 'win32'
